# vma-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  deploy_api.py  deploy_api_async.py  easy-install.py  pyproject.toml  setup.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  easy-install.yml  linters.yml  python-tests.yml  release.yml
bench/: app.py  bench.py  exceptions.py
bench/config/: procfile.py
bench/config/templates/: Procfile  supervisor.conf
bench/utils/: __init__.py  bench.py  cli.py  system.py
tenants/tcsgroup1/: docker-compose.yml  nginx.conf
tenants/tcsgroup1/config/: tenant_config.yaml
tenants/tcsgroup2/: docker-compose.yml  nginx.conf
tenants/tcsgroup2/config/: tenant_config.yaml
vma/: __init__.py  cli.py
vma/commands/: __init__.py  docker_logs.py  github.py  logs.py
vma/config/: __init__.py
vma/core/: plugins.py
vma/plugins/nodejs/: __init__.py
vma/utils/: __init__.py
